syntax = "proto3";
package me.zoeaubert.webserver;

message SillyName {
    string name = 1;
    optional string creator = 2;
}

service SillyNames {
    rpc UpdateSillyNames(UpdateSillyNamesRequest) returns (UpdateSillyNamesResponse) {}
}

message UpdateSillyNamesRequest {
    repeated SillyName names = 1;
}

message UpdateSillyNamesResponse {}
